--- a/ServicesBaba-main/Servicos/style.css
+++ b/ServicesBaba-main/Servicos/style.css
@@ -3,27 +3,18 @@
 body {  
 background-color:  rgb(140, 140, 140);
 }
-.col {
-width:400px;
-  max-height:100%;
-   margin-top:30px;
+
+
+
+.card {
+ 
+  margin-top: 20px;
 }
 
+/* imagem com altura fixa */
 .card-img-top {
-  height: 150px; 
-  width:100% ;       /* ajuste o tamanho aqui */
-  object-fit: cover;    /* corta sem distorcer */
+  height: 150px;
+  object-fit: cover;
 }
-#ducatiMult {
-  color:rgb(183, 3, 0)
-}
-#fpf7g11 {
-  color:rgb(183, 3, 0) ;
-}
-#kpz4f94 {
-  color:rgb(183, 3, 0) ;
-}
-#lp05e11 {
-  color: rgb(30, 174, 30);
-}
+
 
